update IGA docs (may be cruft now)

--- a/docs/IGA-DG/dgpenalty.bib
+++ b/docs/IGA-DG/dgpenalty.bib
@@ -1,7 +1,111 @@
-@article{ozisik2010constants,
+@book{marcus1992survey,
+  title={A survey of matrix theory and matrix inequalities},
+  author={Marcus, Marvin and Minc, Henryk},
+  volume={14},
+  year={1992},
+  publisher={Courier Corporation}
+}
+
+
+@article{vargas2015variations,
+  title={Variations on Hermite methods for wave propagation},
+  author={Vargas, Arturo and Chan, Jesse and Hagstrom, Thomas and Warburton, Tim},
+  journal={arXiv preprint arXiv:1509.08012},
+  year={2015}
+}
+
+
+@article{goodrich2006hermite,
+  title={Hermite methods for hyperbolic initial-boundary value problems},
+  author={Goodrich, John and Hagstrom, Thomas and Lorenz, Jens},
+  journal={Mathematics of computation},
+  volume={75},
+  number={254},
+  pages={595--630},
+  year={2006}
+}
+
+
+@article{banks2016galerkin,
+  title={On Galerkin difference methods},
+  author={Banks, Jeffrey W and Hagstrom, Thomas},
+  journal={Journal of Computational Physics},
+  volume={313},
+  pages={310--327},
+  year={2016},
+  publisher={Elsevier}
+}
+
+
+@incollection{langer2016discontinuous,
+  title={{Discontinuous Galerkin isogeometric analysis of elliptic PDEs on surfaces}},
+  author={Langer, Ulrich and Moore, Stephen E},
+  booktitle={Domain Decomposition Methods in Science and Engineering XXII},
+  pages={319--326},
+  year={2016},
+  publisher={Springer}
+}
+
+
+@incollection{langer2015multipatch,
+  title={{Multipatch discontinuous Galerkin isogeometric analysis}},
+  author={Langer, Ulrich and Mantzaflaris, Angelos and Moore, Stephen E and Toulopoulos, Ioannis},
+  booktitle={Isogeometric Analysis and Applications 2014},
+  pages={1--32},
+  year={2015},
+  publisher={Springer}
+}
+
+@article{mantzaflaris2016low,
+  title={{Low rank tensor methods in Galerkin-based isogeometric analysis}},
+  author={Mantzaflaris, Angelos and J{\"u}ttler, Bert and Khoromskij, Boris N and Langer, Ulrich},
+  journal={Computer Methods in Applied Mechanics and Engineering},
+  year={2016},
+  publisher={Elsevier}
+}
+
+
+@article{chan2016short,
+  title={A short note on the penalty flux parameter for first order discontinuous Galerkin formulations},
+  author={Chan, Jesse and Warburton, T},
+  journal={arXiv preprint arXiv:1611.00102},
+  year={2016}
+}
+
+@article{hughes2005isogeometric,
+  title={{Isogeometric analysis: CAD, finite elements, NURBS, exact geometry and mesh refinement}},
+  author={Hughes, Thomas JR and Cottrell, John A and Bazilevs, Yuri},
+  journal={Computer methods in applied mechanics and engineering},
+  volume={194},
+  number={39},
+  pages={4135--4195},
+  year={2005},
+  publisher={Elsevier}
+}
+
+
+@article{garcia2016value,
+  title={The value of continuity: Refined isogeometric analysis and fast direct solvers},
+  author={Garcia, Daniel and Pardo, David and Dalcin, Lisandro and Paszy{\'n}ski, Maciej and Collier, Nathan and Calo, Victor M},
+  journal={Computer Methods in Applied Mechanics and Engineering},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@techreport{carpenter1994fourth,
+  title={Fourth-order $2N$-storage {R}unge-{K}utta schemes},
+  author={Carpenter, Mark H and Kennedy, Christopher A},
+  year={1994},
+  number={NASA-TM-109112, NAS 1.15:109112},
+ INSTITUTION =   {NASA Langley Research Center}
+}
+
+@techreport{ozisik2010constants,
   title={On the constants in inverse inequalities in L2},
   author={Ozisik, Sevtap and Riviere, Beatrice and Warburton, Tim},
-  year={2010}
+  year={2010},
+  number={CAAM TR10-19},
+ INSTITUTION =   {Rice University}
 }
 
 
@@ -767,6 +871,7 @@ publisher={Elsevier}
   journal={arXiv preprint arXiv:1504.03025},
   year={2015}
 }
+
 @article{appelonew,
   title={A new discontinuous {Galerkin} formulation for wave equations in second order form},
   author={Appel{\"o}, Daniel and Hagstrom, Thomas},
@@ -1421,33 +1526,6 @@ author = {Warburton, T. and Embree, Mark},
   year={1986}
 }
 
-@article{dennard1974design,
-  title={Design of ion-implanted {MOSFET}s with very small physical dimensions},
-  author={Dennard, Robert H and Rideout, VL and Bassous, E and Leblanc, AR},
-  journal={Solid-State Circuits, IEEE Journal of},
-  volume={9},
-  number={5},
-  pages={256--268},
-  year={1974},
-  publisher={IEEE}
-}
-
-@article{moore2006cramming,
-  title={Cramming more components onto integrated circuits (reprinted from Electronics, volume 38, number 8, April 19, 1965, pp. 114 ff).},
-  author={Moore, Gordon E},
-  journal={IEEE Solid-State Circuits Newsletter},
-  volume={3},
-  number={20},
-  pages={33--35},
-  year={2006}
-}
-
-@article{chan2015short,
-  title={A short note on a {Bernstein-Bezier} basis for the pyramid},
-  author={Chan, Jesse and Warburton, T},
-  journal={arXiv preprint arXiv:1508.05609},
-  year={2015}
-}
 
 @article{michoski2015foundations,
 title = "Foundations of the blended isogeometric discontinuous {Galerkin (BIDG)} method ",
