--- a/docs/elasticity_notes/main.tex
+++ b/docs/elasticity_notes/main.tex
@@ -232,7 +232,6 @@ legend style={font=\small}
 
 \usepackage{stmaryrd}
 
-
 \renewcommand{\topfraction}{0.85}
 \renewcommand{\textfraction}{0.1}
 \renewcommand{\floatpagefraction}{0.75}
@@ -263,8 +262,7 @@ legend style={font=\small}
 \newcommand{\LRl}[1]{\left. #1 \right|}
 
 %\newcommand{\cond}[1]{\kappa\LRp{#1}}
-\newcommand{\cond}[2]{\nor{#1}_{#2}\nor{{#1}^{-1}}_{#2}}
-
+%\newcommand{\cond}[2]{\nor{#1}_{#2}\nor{{#1}^{-1}}_{#2}}
 
 \newcommand{\Grad} {\ensuremath{\nabla}}
 \newcommand{\Div} {\ensuremath{\nabla\cdot}}
