removing cruft + adding bib

--- a/docs/bb_wadg/bbwadg.bib
+++ b/docs/bb_wadg/bbwadg.bib
@@ -1,224 +1,3 @@
-@book{marcus1992survey,
-  title={A survey of matrix theory and matrix inequalities},
-  author={Marcus, Marvin and Minc, Henryk},
-  volume={14},
-  year={1992},
-  publisher={Courier Corporation}
-}
-
-
-@article{vargas2015variations,
-  title={Variations on Hermite methods for wave propagation},
-  author={Vargas, Arturo and Chan, Jesse and Hagstrom, Thomas and Warburton, Tim},
-  journal={arXiv preprint arXiv:1509.08012},
-  year={2015}
-}
-
-
-@article{goodrich2006hermite,
-  title={Hermite methods for hyperbolic initial-boundary value problems},
-  author={Goodrich, John and Hagstrom, Thomas and Lorenz, Jens},
-  journal={Mathematics of computation},
-  volume={75},
-  number={254},
-  pages={595--630},
-  year={2006}
-}
-
-
-@article{banks2016galerkin,
-  title={On Galerkin difference methods},
-  author={Banks, Jeffrey W and Hagstrom, Thomas},
-  journal={Journal of Computational Physics},
-  volume={313},
-  pages={310--327},
-  year={2016},
-  publisher={Elsevier}
-}
-
-
-@incollection{langer2016discontinuous,
-  title={{Discontinuous Galerkin isogeometric analysis of elliptic PDEs on surfaces}},
-  author={Langer, Ulrich and Moore, Stephen E},
-  booktitle={Domain Decomposition Methods in Science and Engineering XXII},
-  pages={319--326},
-  year={2016},
-  publisher={Springer}
-}
-
-
-@incollection{langer2015multipatch,
-  title={{Multipatch discontinuous Galerkin isogeometric analysis}},
-  author={Langer, Ulrich and Mantzaflaris, Angelos and Moore, Stephen E and Toulopoulos, Ioannis},
-  booktitle={Isogeometric Analysis and Applications 2014},
-  pages={1--32},
-  year={2015},
-  publisher={Springer}
-}
-
-@article{mantzaflaris2016low,
-  title={{Low rank tensor methods in Galerkin-based isogeometric analysis}},
-  author={Mantzaflaris, Angelos and J{\"u}ttler, Bert and Khoromskij, Boris N and Langer, Ulrich},
-  journal={Computer Methods in Applied Mechanics and Engineering},
-  year={2016},
-  publisher={Elsevier}
-}
-
-
-@article{chan2016short,
-  title={A short note on the penalty flux parameter for first order discontinuous Galerkin formulations},
-  author={Chan, Jesse and Warburton, T},
-  journal={arXiv preprint arXiv:1611.00102},
-  year={2016}
-}
-
-@article{hughes2005isogeometric,
-  title={{Isogeometric analysis: CAD, finite elements, NURBS, exact geometry and mesh refinement}},
-  author={Hughes, Thomas JR and Cottrell, John A and Bazilevs, Yuri},
-  journal={Computer methods in applied mechanics and engineering},
-  volume={194},
-  number={39},
-  pages={4135--4195},
-  year={2005},
-  publisher={Elsevier}
-}
-
-
-@article{garcia2016value,
-  title={The value of continuity: Refined isogeometric analysis and fast direct solvers},
-  author={Garcia, Daniel and Pardo, David and Dalcin, Lisandro and Paszy{\'n}ski, Maciej and Collier, Nathan and Calo, Victor M},
-  journal={Computer Methods in Applied Mechanics and Engineering},
-  year={2016},
-  publisher={Elsevier}
-}
-
-@techreport{carpenter1994fourth,
-  title={Fourth-order $2N$-storage {R}unge-{K}utta schemes},
-  author={Carpenter, Mark H and Kennedy, Christopher A},
-  year={1994},
-  number={NASA-TM-109112, NAS 1.15:109112},
- INSTITUTION =   {NASA Langley Research Center}
-}
-
-@techreport{ozisik2010constants,
-  title={On the constants in inverse inequalities in L2},
-  author={Ozisik, Sevtap and Riviere, Beatrice and Warburton, Tim},
-  year={2010},
-  number={CAAM TR10-19},
- INSTITUTION =   {Rice University}
-}
-
-
-@article{bazilevs2006isogeometric,
-  title={{Isogeometric analysis: approximation, stability and error estimates for $h$-refined meshes}},
-  author={Bazilevs, Yuri and Beirao da Veiga, L and Cottrell, J Austin and Hughes, Thomas JR and Sangalli, Giancarlo},
-  journal={Mathematical Models and Methods in Applied Sciences},
-  volume={16},
-  number={07},
-  pages={1031--1090},
-  year={2006},
-  publisher={World Scientific}
-}
-
-@book{riviere2008discontinuous,
-  title={{Discontinuous Galerkin methods for solving elliptic and parabolic equations: theory and implementation}},
-  author={Riviere, Beatrice},
-  year={2008},
-  publisher={Society for Industrial and Applied Mathematics}
-}
-
-@article{fezoui2005convergence,
-  title={{Convergence and stability of a discontinuous Galerkin time-domain method for the 3D heterogeneous Maxwell equations on unstructured meshes}},
-  author={Fezoui, Loula and Lanteri, St{\'e}phane and Lohrengel, St{\'e}phanie and Piperno, Serge},
-  journal={ESAIM: Mathematical Modelling and Numerical Analysis},
-  volume={39},
-  number={6},
-  pages={1149--1176},
-  year={2005},
-  publisher={EDP Sciences}
-}
-
-@book{cohen2016finite,
-  title={{Finite Elements and Discontinuous Galerkin Methods for Transient Wave Equations}},
-  author={Cohen, Gary and Pernet, S{\'e}bastien},
-  year={2016},
-  publisher={Springer}
-}
-
-@book{horn2012matrix,
-  title={Matrix analysis},
-  author={Horn, Roger A and Johnson, Charles R},
-  year={2012},
-  publisher={Cambridge university press}
-}
-
-@article{kirby2004algorithm,
-  title={{Algorithm 839: FIAT, a new paradigm for computing finite element basis functions}},
-  author={Kirby, Robert C},
-  journal={ACM Transactions on Mathematical Software (TOMS)},
-  volume={30},
-  number={4},
-  pages={502--516},
-  year={2004},
-  publisher={ACM}
-}
-
-@book{boffi2013mixed,
-  title={Mixed finite element methods and applications},
-  author={Boffi, Daniele and Brezzi, Franco and Fortin, Michel and others},
-  volume={44},
-  year={2013},
-  publisher={Springer}
-}
-
-@article{brezzi1985two,
-  title={Two families of mixed finite elements for second order elliptic problems},
-  author={Brezzi, Franco and Douglas Jr, Jim and Marini, L Donatella},
-  journal={Numerische Mathematik},
-  volume={47},
-  number={2},
-  pages={217--235},
-  year={1985},
-  publisher={Springer}
-}
-
-@article{ye2016discontinuous,
-  title={{A discontinuous Galerkin method with a modified penalty flux for the propagation and scattering of acousto-elastic waves}},
-  author={Ye, Ruichao and de Hoop, Maarten V and Petrovitch, Christopher L and Pyrak-Nolte, Laura J and Wilcox, Lucas C},
-  journal={Geophysical Journal International},
-  volume={205},
-  number={2},
-  pages={1267--1289},
-  year={2016},
-  publisher={Oxford University Press}
-}
-
-@misc{simpletracker,
-title={A simple multiple particle tracker with gap closing.},
-howpublished={https://www.mathworks.com/matlabcentral/fileexchange/34040-simple-tracker},
-note={Accessed 10/1/2016}
-}
-
-@article{hughes2014finite,
-  title={{Finite element and NURBS approximations of eigenvalue, boundary-value, and initial-value problems}},
-  author={Hughes, Thomas JR and Evans, John A and Reali, Alessandro},
-  journal={Computer Methods in Applied Mechanics and Engineering},
-  volume={272},
-  pages={290--320},
-  year={2014},
-  publisher={North-Holland}
-}
-
-@article{ainsworth2014dispersive,
-  title={Dispersive behaviour of high order finite element schemes for the one-way wave equation},
-  author={Ainsworth, Mark},
-  journal={Journal of Computational Physics},
-  volume={259},
-  pages={1--10},
-  year={2014},
-  publisher={Elsevier}
-}
-
 @article{chan2016weight1,
   title={{Weight-adjusted discontinuous Galerkin methods: wave propagation in heterogeneous media}},
   author={Chan, Jesse and Hewett, Russell J and Warburton, T},
@@ -573,16 +352,7 @@ publisher={Elsevier}
   publisher={Oxford University Press}
 }
 
-@article{hesthaven2004high,
-  title={{High-order nodal discontinuous Galerkin methods for the Maxwell eigenvalue problem}},
-  author={Hesthaven, JS and Warburton, T},
-  journal={Philosophical Transactions of the Royal Society of London. Series A: Mathematical, Physical and Engineering Sciences},
-  volume={362},
-  number={1816},
-  pages={493--524},
-  year={2004},
-  publisher={The Royal Society}
-}
+
 @article{hesthaven2002nodal,
   title={Nodal high-order methods on unstructured grids: {I.} Time-domain solution of {Maxwell's} equations},
   author={Hesthaven, Jan S and Warburton, T.},
@@ -600,15 +370,11 @@ publisher={Elsevier}
   journal={arXiv preprint arXiv:1512.06025},
   year={2015}
 }
-
 @article{chan2015gpu,
-  title={{GPU-accelerated discontinuous Galerkin methods on hybrid meshes}},
+  title={{GPU}-accelerated discontinuous {G}alerkin methods on hybrid meshes},
   author={Chan, Jesse and Wang, Zheng and Modave, Axel and Remacle, Jean-Francois and Warburton, T},
-  journal={Journal of Computational Physics},
-  volume={318},
-  pages={142--168},
-  year={2016},
-  publisher={Academic Press}
+  journal={arXiv preprint arXiv:1507.02557},
+  year={2015}
 }
 
 @book{ipsen2009numerical,
@@ -871,7 +637,6 @@ publisher={Elsevier}
   journal={arXiv preprint arXiv:1504.03025},
   year={2015}
 }
-
 @article{appelonew,
   title={A new discontinuous {Galerkin} formulation for wave equations in second order form},
   author={Appel{\"o}, Daniel and Hagstrom, Thomas},
@@ -1015,17 +780,6 @@ journal={Comput. Math. Appl.},
 volume={59},
 year={2010}, 
 pages={663-676}
-}
-
-@article{kopriva2014energy,
-  title={{An energy stable discontinuous Galerkin spectral element discretization for variable coefficient advection problems}},
-  author={Kopriva, David A and Gassner, Gregor J},
-  journal={SIAM Journal on Scientific Computing},
-  volume={36},
-  number={4},
-  pages={A2076--A2099},
-  year={2014},
-  publisher={SIAM}
 }
 
 @article{kopriva2010quadrature,
@@ -1310,16 +1064,17 @@ year={1957},
 
 
 @article{Warburton20063205,
-title = {{The role of the penalty in the local discontinuous Galerkin method for Maxwell's eigenvalue problem}},
-journal = {Computer Methods in Applied Mechanics and Engineering},
-volume = {195},
-number = {25-28},
-pages = {3205 - 3223},
-year = {2006},
+title = "The role of the penalty in the local discontinuous Galerkin method for Maxwell's eigenvalue problem ",
+journal = "Computer Methods in Applied Mechanics and Engineering ",
+volume = "195",
+number = "25?28",
+pages = "3205 - 3223",
+year = "2006",
+note = "Discontinuous Galerkin Methods ",
 issn = "0045-7825",
 doi = "http://dx.doi.org/10.1016/j.cma.2005.06.011",
 url = "http://www.sciencedirect.com/science/article/pii/S0045782505002665",
-author = {Warburton, T. and Embree, Mark},
+author = "T. Warburton and Mark Embree",
 }
 
 @phdthesis{warburton1999spectral,
@@ -1526,6 +1281,33 @@ author = {Warburton, T. and Embree, Mark},
   year={1986}
 }
 
+@article{dennard1974design,
+  title={Design of ion-implanted {MOSFET}s with very small physical dimensions},
+  author={Dennard, Robert H and Rideout, VL and Bassous, E and Leblanc, AR},
+  journal={Solid-State Circuits, IEEE Journal of},
+  volume={9},
+  number={5},
+  pages={256--268},
+  year={1974},
+  publisher={IEEE}
+}
+
+@article{moore2006cramming,
+  title={Cramming more components onto integrated circuits (reprinted from Electronics, volume 38, number 8, April 19, 1965, pp. 114 ff).},
+  author={Moore, Gordon E},
+  journal={IEEE Solid-State Circuits Newsletter},
+  volume={3},
+  number={20},
+  pages={33--35},
+  year={2006}
+}
+
+@article{chan2015short,
+  title={A short note on a {Bernstein-Bezier} basis for the pyramid},
+  author={Chan, Jesse and Warburton, T},
+  journal={arXiv preprint arXiv:1508.05609},
+  year={2015}
+}
 
 @article{michoski2015foundations,
 title = "Foundations of the blended isogeometric discontinuous {Galerkin (BIDG)} method ",
